# hillbrotherspainting

./: .gitignore  CNAME  contact.html  contractors.html  footer.html  header.html  index.html  pyproject.toml  residential.html  style.css
css/: contact.css  contractors.css  index.css  residential.css  style.css
js/: scripts.js
scraper/: scrape_images.py  scrape_images1.py  scrape_images2.py
